Extra z-index for colorpicker as default one is overridden by ..dropdown-menu class. Fixes #679

--- a/Ip/Internal/Core/assets/admin/admin.css
+++ b/Ip/Internal/Core/assets/admin/admin.css
@@ -8756,6 +8756,7 @@
 }
 .ip .colorpicker {
   left: 0;
+  z-index: 1060;
   min-width: 130px;
   padding: 4px;
   margin-top: 1px;
